@@ -8,9 +8,12 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 
 import java.security.Principal;
+import java.time.LocalDate;
+import java.util.Date;
 import java.util.List;
 import java.util.Optional;
 
@@ -35,17 +38,28 @@ public class WebController {
                 .orElseThrow(
                         () -> new RuntimeException("User not found!"));
         model.addAttribute("user",user);
+        model.addAttribute("lendItems",this.items.findAllByLender(user));
         return "account";
     }
 
     @GetMapping("/details")
     public String details(@RequestParam(name = "id") final String id, Model model){
-        final Item item = this.items.findById(new Long(id))
+        final Item item = this.items.findById(Long.valueOf(id))
                 .orElseThrow(
                         () -> new RuntimeException("Item not found!"));
         model.addAttribute("item", item);
         return "details";
     }
 
+    @GetMapping("/newitem")
+    public String newitemPage(){
+        return "newitem";
+    }
 
+    @GetMapping("/search")
+    public String search(@RequestParam final String query, Model model) {
+        model.addAttribute("items", this.items.findAllByNameContainingOrDescriptionContaining(query,query));
+        model.addAttribute("query", query);
+        return "search";
+    }
 }
